# Husk

./: .envrc  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml
husk-client/: Cargo.toml
husk-client/src/: main.rs
husk-core/: Cargo.toml  build.rs
husk-core/src/: ipc.rs  lib.rs
husk-daemon/: Cargo.toml
husk-daemon/src/: main.rs
src/: main.cpp
src/client/render/: WgpuRenderer.cpp  WgpuRenderer.hpp
src/client/window/: SdlApp.cpp  SdlApp.hpp
src/common/: SharedGrid.hpp
src/daemon/: PtyProcess.cpp  PtyProcess.hpp  TerminalMachine.cpp  TerminalMachine.hpp
src/terminal/: Terminal.cpp  Terminal.hpp
src/vt/: RenderState.cpp  RenderState.hpp  Terminal.cpp  Terminal.hpp
