[package]
name = "husk-client"
version = "0.1.0"
edition = "2024"

[dependencies]
husk-core = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { version = "1.30", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Frontend dependencies
winit = "0.29"
wgpu = "0.20"
pollster = "0.3"
