[package]
name = "husk-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tracing = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.30", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
libc = "0.2"

[build-dependencies]
bindgen = "0.69.4"
