[package]
name = "husk-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
husk-core = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { version = "1.30", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
